# lagrangian_hamiltonian_tool

./: LICENSE  README.md  lagrangian_and_hamiltonian.ipynb  pyproject.toml
src/lagrangian_hamiltonian_solver/: cli.py  core.py
